2011-08-03  Minh Dao-Tran  <dao@kr.tuwien.ac.at>

	* include/network/ConcurrentMessageQueueHelper.h: Add a helper method for
	receiving models.

	* include/network/Handler.tcc: Clean up.
	* testsuite/testOutputDispatcher.cpp: Likewise.

	* src/network/OutputDispatcher.cpp: Fix debugging information.

	* src/network/OutputThread.cpp: Receive models from output_dispatcher.

	* src/network/Server.cpp: Fix bug: multiple output_dispatcher.

	* src/solver/RelSatSolver.cpp: Send path even with null models.

2011-08-01  Minh Dao-Tran  <dao@kr.tuwien.ac.at>

	* include/network/OutputDispatcher.h: Add OutputDispatcherPtr.

	* include/network/Handler.h: Make use of OutputDispatcher.
	Got around a stupid bug from boost bind. It's strange that
	adding one more parameter to handle_read_header makes compilation fail.
	* include/network/Handler.tcc: Likewise.
	* include/network/HandlerThread.h: Likewise.
	* include/network/OutputThread.h: Likewise.
	* include/network/Server.h: Likewise.
	* src/network/OutputThread.cpp: Likewise.
	* src/network/Server.cpp: Likewise.

	* testsuite/Makefile.am: Add new testcase for OutputDispatcher.

	* include/network/Makefile.am: Add OutputDispatcher.h.
	* src/network/Makefile.am: Add OutputDispatcher.cpp.

	* include/network/OutputDispatcher.h: New file.
	* src/network/OutputDispatcher.cpp: Likewise.
	* testsuite/testOutputDispatcher.cpp: Likewise.

2011-07-28  Minh Dao-Tran  <dao@kr.tuwien.ac.at>

	* include/parser/ClaspResultOnlineParser.h: Allow parsing models returned
	in more than 1 line.
	* include/parser/ClaspResultOnlineParser.tcc: Likewise.

2011-04-21  Minh Dao-Tran  <dao@kr.tuwien.ac.at>

	* examples/tables.py: Update script to extract memory usage.

2011-04-19  Minh Dao-Tran  <dao@kr.tuwien.ac.at>

	* src/dmcsc.cpp: Fix looping to get k unique models.

	* include/dmcs/ModelSessionId.h: Fix a corner case that causes memory leak.

	* src/network/JoinThread.cpp: Add some debugging infor.
	* include/network/NeighborThread.h: Likewise.
