@@ -6,9 +6,13 @@
 SimpleServer::SimpleServer(boost::asio::io_service& i,
 			   const boost::asio::ip::tcp::endpoint& endpoint)
   : io_service(i),
-    acceptor(io_service, endpoint)
+    acceptor(io_service, endpoint),
+    received(0)
 {
+  std::cerr << "SERVER: constructor()" << std::endl;
+
   connection_ptr my_connection(new connection(io_service));
+  conn_man.insert(my_connection);
   
   acceptor.async_accept(my_connection->socket(),
 			boost::bind(&SimpleServer::handle_accept, this,
@@ -21,10 +25,16 @@ SimpleServer::SimpleServer(boost::asio::io_service& i,
 void
 SimpleServer::handle_accept(const boost::system::error_code& e, connection_ptr conn)
 {
+  if (!acceptor.is_open())
+    {
+      return;
+    }
+
   if (!e)
     {
       std::cerr << "SERVER: Create new connection..." << std::endl;
       connection_ptr new_conn(new connection(acceptor.io_service()));
+      conn_man.insert(new_conn);
 
       acceptor.async_accept(new_conn->socket(),
 			    boost::bind(&SimpleServer::handle_accept, this,
@@ -40,7 +50,7 @@ SimpleServer::handle_accept(const boost::system::error_code& e, connection_ptr c
     }
   else
     {
-      std::cerr << "SERVER: ERROR: " << e.message() << std::endl;
+      std::cerr << "SERVER: ERROR handle_accept: " << e.message() << std::endl;
       throw std::runtime_error(e.message());
     }
 }
@@ -54,10 +64,12 @@ SimpleServer::handle_read_header(const boost::system::error_code& e,
 {
   if (!e)
     {
-      if (header->find("END") != std::string::npos)
+      std::cerr << "Got header = " << *header << std::endl;
+      received++;
+      if (header->find("EOF") == std::string::npos)
 	{
 	  // block the incomming messages for a while
-	  boost::posix_time::milliseconds n(5000);
+	  boost::posix_time::milliseconds n(500);
 	  boost::this_thread::sleep(n);
 
 	  conn->async_read(*header,
@@ -66,17 +78,31 @@ SimpleServer::handle_read_header(const boost::system::error_code& e,
 	}
       else
 	{
-	  // do nothing
 	  std::cerr << "SERVER: BAILING OUT" << std::endl;
+	  for (std::set<connection_ptr>::iterator it = conn_man.begin();
+	       it != conn_man.end(); ++it)
+	    {
+	      connection_ptr c = *it;
+	      conn_man.erase(c);
+	      c->socket().close();
+	    }
+	  conn_man.clear();
+	  acceptor.close();
 	}
     }
   else
     {
-      std::cerr << "SERVER: ERROR: " << e.message() << std::endl;
+      std::cerr << "SERVER: ERROR handle_read_header: " << e.message() << std::endl;
       throw std::runtime_error(e.message());
     }
 }
 
+
+std::size_t
+SimpleServer::no_received()
+{
+  return received;
+}
 
 
 // Local Variables:
