@@ -1,3 +1,11 @@
+2011-08-12  Minh Dao-Tran  <dao@kr.tuwien.ac.at>
+
+	* testsuite/testBlockingAsio.cpp: Add new test case.
+	* testsuite/SimpleClient.h: Likewise.
+	* testsuite/SimpleClient.cpp: Likewise.
+	* testsuite/SimpleServer.h: Likewise.
+	* testsuite/SimpleServer.cpp: Likewise.
+
 2011-08-03  Minh Dao-Tran  <dao@kr.tuwien.ac.at>
 
 	* include/network/ConcurrentMessageQueueHelper.h: Add a helper method for
